force-app/main/default/objects/TECH_Merge_Manager__c/TECH_Merge_Manager__c.object-meta.xml
<CustomObject>
    <label>TECH Merge Manager</label>
    <nameField>
        <label>TECH_Merge_Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TECH_Merge_Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>