force-app/main/default/objects/TECH_Merge_Manager__c/fields/Child_DreamId__c.field-meta.xml
<CustomField>
    <fullName>Child_DreamId__c</fullName>
    <label>Child DreamId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>