force-app/main/default/objects/TECH_Merge_Manager__c/fields/Child_SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>Child_SalesforceId__c</fullName>
    <label>Child SalesforceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>