force-app/main/default/objects/TECH_Merge_Manager__c/fields/Master_DreamId__c.field-meta.xml
<CustomField>
    <fullName>Master_DreamId__c</fullName>
    <externalId>true</externalId>
    <label>Master DreamId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>