force-app/main/default/objects/TECH_Merge_Manager__c/fields/Master_SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>Master_SalesforceId__c</fullName>
    <externalId>true</externalId>
    <label>Master SalesforceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>