force-app/main/default/objects/TECH_Merge_Manager__c/fields/TR_Logs__c.field-meta.xml
<CustomField>
    <fullName>TR_Logs__c</fullName>
    <label>Logs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>