force-app/main/default/objects/TECH_Merge_Manager__c/fields/TR_UserToAnonymize__c.field-meta.xml
<CustomField>
    <fullName>TR_UserToAnonymize__c</fullName>
    <label>User to anonymize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>